--- a/portfolio/src/pages/Projects.css
+++ b/portfolio/src/pages/Projects.css
@@ -1,5 +1,5 @@
 body, html {
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .projectsPageContainer {
